--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,186 @@
-# Binbridge Dependencies
-# =====================
-
-# PyTorch (根据 CUDA 版本选择)
-torch>=2.0.0
-torchvision>=0.15.0
-
-# Transformers & PEFT
-transformers>=4.35.0
-peft>=0.6.0
-accelerate>=0.24.0
-
-# 量化支持
-bitsandbytes>=0.41.0
-
-# 数据处理
-numpy>=1.24.0
-pandas>=2.0.0
-
-# 进度条和日志
-tqdm>=4.65.0
-tensorboard>=2.14.0
-wandb>=0.15.0  # 可选
-
-# 评估
-evaluate>=0.4.0
-sacrebleu>=2.3.0  # 可选，用于 BLEU 计算
-
-# API (用于教师模型)
-openai>=1.0.0  # 可选，用于 GPT-4 CoT 生成
-
-# 开发工具
-pytest>=7.4.0
-black>=23.0.0
-isort>=5.12.0
-
-# 其他
-python-dotenv>=1.0.0
-PyYAML>=6.0.0
+accelerate==1.12.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.3.0
+bitsandbytes==0.48.2
+Bottleneck==1.6.0
+cachetools==6.2.4
+certifi==2025.1.31
+charset-normalizer==3.4.1
+contourpy==1.3.2
+cxxfilt==0.3.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==3.5.0
+deepspeed==0.18.3
+dill==0.3.8
+distro==1.9.0
+docstring_parser==0.17.0
+einops==0.8.1
+evaluate==0.4.6
+filelock==3.18.0
+filetype==1.2.0
+flash_attn==2.8.3
+fonttools==4.58.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+google-api-core==2.28.1
+google-auth==2.45.0
+google-cloud-aiplatform==1.132.0
+google-cloud-bigquery==3.39.0
+google-cloud-core==2.5.0
+google-cloud-resource-manager==1.15.0
+google-cloud-storage==3.7.0
+google-crc32c==1.8.0
+google-genai==1.56.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+googledrivedownloader==1.1.0
+greenlet==3.2.4
+grpc-google-iam-v1==0.14.3
+grpcio==1.76.0
+grpcio-status==1.76.0
+h11==0.16.0
+hf-xet==1.2.0
+hjson==3.1.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+idna==3.10
+interchange==2021.0.4
+Jinja2==3.1.6
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwisolver==1.4.8
+langchain==1.0.8
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.2.6
+langchain-google-genai==4.1.2
+langchain-google-vertexai==3.2.0
+langchain-ollama==1.0.0
+langchain-text-splitters==1.0.0
+langgraph==1.0.3
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.4
+langgraph-sdk==0.2.9
+langsmith==0.4.44
+littleutils==0.2.4
+lmdb==1.6.2
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.3
+milvus-lite==2.5.1
+monotonic==1.6
+mpmath==1.3.0
+msgpack==1.1.2
+multidict==6.3.1
+multiprocess==0.70.16
+mypy_extensions==1.1.0
+networkx==3.4.2
+ninja==1.13.0
+numexpr==2.14.1
+numpy==1.26.4
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu11==11.8.87
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu11==11.8.89
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu11==8.7.0.84
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu11==10.3.0.86
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu11==11.4.1.48
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu11==11.7.5.86
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu11==2.19.3
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu11==11.8.86
+nvidia-nvtx-cu12==12.8.90
+ogb==1.3.2
+ollama==0.6.1
+orjson==3.11.4
+ormsgpack==1.12.0
+outdated==0.2.2
+packaging==25.0
+pandas==2.2.3
+pansi==2024.11.0
+peft==0.18.0
+pillow==11.1.0
+propcache==0.3.1
+proto-plus==1.27.0
+protobuf==6.33.2
+psutil==7.1.3
+py-cpuinfo==9.0.0
+py2neo==2021.2.4
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.4
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pymilvus==2.6.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-louvain==0.16
+pytz==2025.1
+PyYAML==6.0.2
+rdflib==7.1.4
+regex==2024.11.6
+requests==2.32.5
+requests-toolbelt==1.0.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.1.0
+setuptools==80.9.0
+shapely==2.1.2
+simhash==2.1.2
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+sympy==1.14.0
+tenacity==9.1.2
+tensorboardX==2.4.1
+threadpoolctl==3.6.0
+tokenizer==3.4.5
+tokenizers==0.22.1
+torch==2.9.1
+torch_geometric==1.7.2
+tqdm==4.67.1
+transformers==4.57.3
+tree-sitter==0.25.2
+tree-sitter-c==0.24.1
+tree-sitter-cpp==0.23.4
+triton==3.5.1
+trl==0.26.2
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+ujson==5.11.0
+urllib3==2.3.0
+uuid_utils==0.12.0
+validators==0.35.0
+websockets==15.0.1
+wheel==0.45.1
+xxhash==3.5.0
+yarl==1.18.3
+zstandard==0.25.0
