--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp==3.11.16
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.11.0
+asttokens==3.0.0
 attrs==25.3.0
 bitsandbytes==0.48.2
 Bottleneck==1.6.0
@@ -15,15 +16,17 @@ cxxfilt==0.3.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==3.5.0
+decorator==5.1.1
 deepspeed==0.18.3
 dill==0.3.8
 distro==1.9.0
 docstring_parser==0.17.0
 einops==0.8.1
 evaluate==0.4.6
+executing==2.2.0
 filelock==3.18.0
 filetype==1.2.0
-flash_attn==2.8.3
+flutes==0.3.0
 fonttools==4.58.0
 frozenlist==1.5.0
 fsspec==2024.12.0
@@ -52,6 +55,8 @@ httpx-sse==0.4.3
 huggingface-hub==0.36.0
 idna==3.10
 interchange==2021.0.4
+ipython==8.32.0
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
 jsonpatch==1.33
@@ -71,12 +76,15 @@ langgraph-prebuilt==1.0.4
 langgraph-sdk==0.2.9
 langsmith==0.4.44
 littleutils==0.2.4
+llvmlite==0.44.0
 lmdb==1.6.2
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.3
+matplotlib-inline==0.1.7
 milvus-lite==2.5.1
 monotonic==1.6
+mpi4py==4.1.1
 mpmath==1.3.0
 msgpack==1.1.2
 multidict==6.3.1
@@ -106,8 +114,9 @@ nvidia-cusolver-cu12==11.7.3.90
 nvidia-cusparse-cu11==11.7.5.86
 nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
+nvidia-ml-py==13.580.82
 nvidia-nccl-cu11==2.19.3
-nvidia-nccl-cu12==2.27.5
+nvidia-nccl-cu12==2.27.7
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu11==11.8.86
@@ -120,12 +129,17 @@ outdated==0.2.2
 packaging==25.0
 pandas==2.2.3
 pansi==2024.11.0
+parso==0.8.4
 peft==0.18.0
+pexpect==4.9.0
 pillow==11.1.0
+prompt_toolkit==3.0.50
 propcache==0.3.1
 proto-plus==1.27.0
 protobuf==6.33.2
 psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
 py2neo==2021.2.4
 pyarrow==19.0.1
@@ -134,6 +148,7 @@ pyasn1_modules==0.4.2
 pydantic==2.12.4
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+Pygments==2.19.1
 pymilvus==2.6.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -150,21 +165,28 @@ safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.1.0
+sentencepiece==0.2.1
 setuptools==80.9.0
 shapely==2.1.2
 simhash==2.1.2
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
+stack-data==0.6.3
+style==1.1.0
 sympy==1.14.0
 tenacity==9.1.2
 tensorboardX==2.4.1
+termcolor==2.5.0
 threadpoolctl==3.6.0
 tokenizer==3.4.5
 tokenizers==0.22.1
 torch==2.9.1
 torch_geometric==1.7.2
+torchaudio==2.9.1
+torchvision==0.24.1
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.57.3
 tree-sitter==0.25.2
 tree-sitter-c==0.24.1
@@ -176,9 +198,11 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 ujson==5.11.0
+update==0.0.1
 urllib3==2.3.0
 uuid_utils==0.12.0
 validators==0.35.0
+wcwidth==0.2.13
 websockets==15.0.1
 wheel==0.45.1
 xxhash==3.5.0
